# chronista

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-format.yml  cmake-multi-platform.yml
exe/: main.cpp
include/chronista/: 2v2pl.hpp  fact.hpp  lockinfo.hpp  operation.hpp  schedule.hpp  waitfor.hpp
src/chronista/: 2v2pl.cpp  fact.cpp  lockinfo.cpp  operation.cpp  schedule.cpp  waitfor.cpp
tests/chronista/: fact.cpp  operation.cpp  schedule.cpp
